# ftxui-tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
local/lib/cmake/ftxui/: ftxui-config-version.cmake
local/lib/pkgconfig/: ftxui.pc
